--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "webpack": "^5.95.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
     "webpack-node-externals": "^3.0.0"
